- added ingametowers list